Make Nalim and Membrane work on Java 21+ (Untested)
These are untested changes. They might work, they might not work. How fun!